<resources>
    <string name="app_name">Week_1</string>
    <string name="title_text">오늘 하루는 어땠나요?</string>
    <string name="description_text">감정우표를 선택해주세요\n선택한 감정우표를 기반으로 맞춤형 질문이 배달됩니다</string>
    <string name="happy_text">더없이 행복한 하루였어요</string>
    <string name="excited_text">들뜨고 흥분돼요</string>
    <string name="soso_text">평범한 하루였어요</string>
    <string name="sad_text">생각이 많아지고 불안해요</string>
    <string name="angry_text">부글부글 화가 나요</string>

</resources>