<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center_horizontal">


    <!-- 상단 텍스트 -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_text"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description_text"
        android:textSize="14sp"
        android:gravity="center"
        android:layout_marginTop="8dp" />

    <!-- 감정 선택 리스트 -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="36dp">

        <!-- 각 감정 우표 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="16dp">

            <ImageView
                android:id="@+id/smileImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/smile"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/happy_text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/happy_text"
                android:textSize="14sp"
                android:textColor="#000000"
                android:gravity="center"
                android:layout_marginTop="8dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="16dp">

            <ImageView
                android:id="@+id/excitedImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/excited"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/excited_text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/excited_text"
                android:textSize="14sp"
                android:textColor="#000000"
                android:gravity="center"
                android:layout_marginTop="8dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="16dp">

            <ImageView
                android:id="@+id/sosoImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/soso"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/soso_text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/soso_text"
                android:textSize="14sp"
                android:textColor="#000000"
                android:gravity="center"
                android:layout_marginTop="8dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="16dp">

            <ImageView
                android:id="@+id/sadImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/sad"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/sad_text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sad_text"
                android:textSize="14sp"
                android:textColor="#000000"
                android:gravity="center"
                android:layout_marginTop="8dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="16dp">

            <ImageView
                android:id="@+id/angryImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/angry"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/angry_text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/angry_text"
                android:textSize="14sp"
                android:textColor="#000000"
                android:gravity="center"
                android:layout_marginTop="8dp" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>